--- a/Ctc.css
+++ b/Ctc.css
@@ -159,7 +159,7 @@ input[type="checkbox"].checker:checked {
 .contact-footer { padding: 20px; }
 .footer__text { color: var(--text); }
 
-/* ===== Responsive ===== */
+/* ====== Responsive ====== */
 @media screen and (max-width: 600px) {
   .Form { width: 95%; padding: 20px; }
 }
